# tsumugi-spark

./: .gitignore  .scalafmt.conf  404.html  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
concepts/concepts/: index.html
concepts/usecases/: index.html
dev/: run-connect.py  run-connect.sh
docs/: concepts.md  gen_ref_pages.py  index.md
docs/concepts/: concepts.md  usecases.md
docs/notebooks/: basic_example.ipynb  using_where.ipynb
docs/python/: main_structures.md
gen_ref_pages/: index.html
notebooks/basic_example/: index.html
notebooks/using_where/: index.html
python/main_structures/: index.html
search/: search_index.json
static/: diagram.drawio
static/protobuf/: protobuf-diagram.uml
tsumugi-python/: pyproject.toml
tsumugi-python/examples/: basic_example.ipynb
tsumugi-python/tsumugi/: __init__.py  analyzers.py  anomaly_detection.py  checks.py  enums.py  repository.py  utils.py  verification.py
tsumugi-python/tsumugi/examples/: base_example_classic.py
tsumugi-python/tsumugi/proto/: analyzers_pb2.py  analyzers_pb2.pyi  repository_pb2.py  repository_pb2.pyi  strategies_pb2.py  suite_pb2.py  suite_pb2.pyi
tsumugi-server/: build.sbt  dependency-reduced-pom.xml  pom.xml
tsumugi-server/project/: plugins.sbt
tsumugi_golang/: go.mod  go.sum
tsumugi_python/: pyproject.toml
tsumugi_python/examples/: base_example.py
tsumugi_python/proto/: analyzers_pb2.py  strategies_pb2.py  strategies_pb2.pyi  suite_pb2.py  suite_pb2.pyi
(+34 files in other folders)
